--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13531,3 +13531,22 @@ a {
   color: black;
 }
 
+.card .icon-bar {
+  width: 100%;
+  background-color: #dff0d8;
+  opacity: 0.7;
+  list-style: none;
+  z-index: 100;
+  position: absolute;
+  top: 0;
+}
+
+.card .icon-bar li {
+  float: right;
+  margin-right: .7em;
+}
+
+.card .icon-bar li .fa-btn {
+  color: #d9534f;
+}
+
