删除项目分类的功能实现

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13546,6 +13546,13 @@ a {
   margin-right: .7em;
 }
 
+.card .icon-bar li .btn {
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+}
+
 .card .icon-bar li .fa-btn {
   color: #d9534f;
 }
