--- a/resources/sass/_projectCard.scss
+++ b/resources/sass/_projectCard.scss
@@ -10,7 +10,12 @@
     li {
       float: right;
       margin-right: .7em;
-
+      .btn {
+        background-color: transparent;
+        border: none;
+        border-radius: 0;
+        padding: 0;
+      }
       .fa-btn {
         color: #d9534f;
       }
