--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13557,3 +13557,8 @@ a {
   color: #d9534f;
 }
 
+.card .modal-trigger {
+  background-color: transparent;
+  border: 1px solid rgba(108, 117, 125, 0.5);
+}
+
