--- a/resources/sass/_projectCard.scss
+++ b/resources/sass/_projectCard.scss
@@ -21,4 +21,8 @@
       }
     }
   }
+  .modal-trigger {
+    background-color: transparent;
+    border: 1px solid rgba(108, 117, 125, 0.5);
+  }
 }
